cargo-features = ["edition2021"]

[package]
name = "code-runner"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { path = "./poise" }
tokio = { version = "1.9.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
version = "3.0.0"
sys-info = "0.9.0"
