cargo-features = ["edition2021", "strip"]

[package]
name = "coderunner"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { path = "./poise", features = ["collector"] }
tokio = { version = "1.9.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
version = "3.0.0"
execute = "0.2.9"

[dev-dependencies]
rusty-hook = "0.11.2"

[profile.release]
lto = "fat"
debug = false
opt-level = 3
panic = "abort"
strip = "symbols"
codegen-units = 1
overflow-checks = false
